--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -27,11 +27,13 @@ jobs:
         draft: false
         prerelease: false
         
-    - uses: actions/checkout@v2
+#     - uses: actions/checkout@v2
     
     - name: Build for Linux
       if: matrix.os == 'ubuntu-latest'
-      run: swift build -v
+      run: |
+        swift -v
+        ls
       
     - name: Upload release assets for linux
       if: matrix.os == 'ubuntu-latest'
@@ -41,17 +43,17 @@ jobs:
         asset_path: target/release/dmenv
         asset_name: dmenv-linux
 
-    - name: Build for Macosx
-      if: matrix.os == 'macos-latest'
-      run: swift build -v
+#     - name: Build for Macosx
+#       if: matrix.os == 'macos-latest'
+#       run: swift build -v
     
-    - name: Upload release assets for macos
-      if: matrix.os == 'macos-latest'
-      uses: actions/upload-release-asset@v1.0.1
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: target/release/dmenv
-        asset_name: dmenv-linux
+#     - name: Upload release assets for macos
+#       if: matrix.os == 'macos-latest'
+#       uses: actions/upload-release-asset@v1.0.1
+#       with:
+#         upload_url: ${{ steps.create_release.outputs.upload_url }}
+#         asset_path: target/release/dmenv
+#         asset_name: dmenv-linux
 
   
   
