--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -13,6 +13,7 @@ jobs:
     strategy:
        matrix:
           os: [ubuntu-latest, macos-latest]
+          swift: ["5.3"]
     
     steps: 
     - name: "Create GitHub Release"
