--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -29,6 +29,7 @@ jobs:
 
 
   build_macosx:
+    needs: releases
     runs-on: macos-latest    
     steps: 
     - name: "Get latest GitHub Release"
@@ -57,6 +58,7 @@ jobs:
 
   
   build_linux:
+    needs: releases
     runs-on: ubuntu-latest
     container: swiftlang/swift:nightly-5.5-bionic
     steps:
