--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -22,15 +22,12 @@ jobs:
       env:
         JOB_NUMBER: $GITHUB_RUN_NUMBER
       with:
-        script: |
-          console.log('Hello JOB_NUMBER ${{ process.env.JOB_NUMBER} }')
-          
-          
-#         github.rest.repos.createRelease({
-#           owner: context.repo.owner,
-#           repo: context.repo.repo,
-#           tag_name: ${JOB_NUMBER}v`
-#         });    
+        script: |          
+          github.rest.repos.createRelease({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            tag_name: ${JOB_NUMBER}v`
+          });    
 
 
   build_macosx:
