--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -26,7 +26,7 @@ jobs:
           github.rest.repos.createRelease({
             owner: context.repo.owner,
             repo: context.repo.repo,
-            tag_name: ${JOB_NUMBER}v`
+            tag_name: '${JOB_NUMBER}v'
           });    
 
 
