--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -21,13 +21,17 @@ jobs:
       uses: actions/github-script@v5
       env:
         JOB_NUMBER: $GITHUB_RUN_NUMBER
+        FIRST_NAME: Mona
+        LAST_NAME: Octocat
       with:
         script: |          
-          github.rest.repos.createRelease({
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            tag_name: '${JOB_NUMBER}v'
-          });    
+          const { FIRST_NAME, LAST_NAME } = process.env
+          console.log(`Hello ${FIRST_NAME} ${LAST_NAME}`)
+#           github.rest.repos.createRelease({
+#             owner: context.repo.owner,
+#             repo: context.repo.repo,
+#             tag_name: '${JOB_NUMBER}v'
+#           });    
 
 
   build_macosx:
