--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -20,13 +20,12 @@ jobs:
       id: create_release
       uses: actions/github-script@v5
       env:
-        JOB_NUMBER: $GITHUB_RUN_NUMBER
+        JOB_NUMBER: ${GITHUB_RUN_NUMBER}
         FIRST_NAME: Mona
         LAST_NAME: Octocat
       with:
         script: |          
-          const { FIRST_NAME, LAST_NAME } = process.env
-          console.log(`Hello ${FIRST_NAME} ${LAST_NAME}`)
+          console.log('Hello ${process.env.FIRST_NAME} ${process.env.LAST_NAME} ${process.env.JOB_NUMBER}')
 #           github.rest.repos.createRelease({
 #             owner: context.repo.owner,
 #             repo: context.repo.repo,
