--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -19,25 +19,25 @@ jobs:
     - name: "Create GitHub Release"
       id: create_release
       uses: actions/github-script@v5
-      env:
-        FIRST_NAME: Mona
-        LAST_NAME: Octocat
-        JOB_NUMBER: ${GITHUB_RUN_NUMBER}
       with:
         script: |
-          const { FIRST_NAME, LAST_NAME, JOB_NUMBER } = process.env
-          console.log(`Hello ${FIRST_NAME} ${LAST_NAME} ${JOB_NUMBER}`)
-#           github.rest.repos.createRelease({
-#             owner: context.repo.owner,
-#             repo: context.repo.repo,
-#             tag_name: '${JOB_NUMBER}v'
-#           });    
+          const JOB_NUMBER = ${{ GITHUB_RUN_NUMBER }}
+          console.log(`Hello ${JOB_NUMBER}`)
+          github.rest.repos.createRelease({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            tag_name: '${JOB_NUMBER}v'
+          });    
 
 
   build_macosx:
     needs: releases
     runs-on: macos-latest    
     steps: 
+    - uses: fwal/setup-swift@v1
+      with:
+        swift-version: "5.5"
+    
     - name: "Get latest GitHub Release"
       id: get_release
       uses: actions/github-script@v5
