--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -25,7 +25,7 @@ jobs:
           const JOB_NUMBER1 = ${{ env.JOB_NUMBER }}
           console.log(`Hello ${JOB_NUMBER1}`)
           console.log('Hello ${JOB_NUMBER1}')
-          console.log(`Hello ${env.JOB_NUMBER}`)
+          console.log(`Hello ${JOB_NUMBER}`)
           github.rest.repos.createRelease({
             owner: context.repo.owner,
             repo: context.repo.repo,
