--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -12,10 +12,8 @@ jobs:
     steps: 
     - name: Check ENV
       run: |
-        echo "GITHUB_JOB $GITHUB_JOB"
         echo "GITHUB_RUN_NUMBER $GITHUB_RUN_NUMBER"
-        echo "JOB_NUMBER=$GITHUB_RUN_NUMBER" >> $GITHUB_ENV
-        
+        echo "JOB_NUMBER=$GITHUB_RUN_NUMBER" >> $GITHUB_ENV        
         
     - name: "Create GitHub Release"
       id: create_release
@@ -23,13 +21,10 @@ jobs:
       with:
         script: |
           const JOB_NUMBER1 = ${{ env.JOB_NUMBER }}
-          console.log(`Hello ${JOB_NUMBER1}`)
-          console.log('Hello ${JOB_NUMBER1}')
-          console.log(`Hello ${JOB_NUMBER}`)
           github.rest.repos.createRelease({
             owner: context.repo.owner,
             repo: context.repo.repo,
-            tag_name: '${JOB_NUMBER}v'
+            tag_name: `${JOB_NUMBER}v`
           });    
 
 
