--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -21,13 +21,19 @@ jobs:
       with:
         script: |
           const JOB_NUMBER1 = ${{ env.JOB_NUMBER }}
+          
+          console.log(`Hello ${JOB_NUMBER1}`)
+          console.log('Hello ${JOB_NUMBER1}')
+          console.log(`Hello ${JOB_NUMBER}`)
+          
           const tag_name = `${JOB_NUMBER}v`
           console.log(`Hello tag_name ${tag_name}`) 
-          github.rest.repos.createRelease({
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            tag_name: `${JOB_NUMBER}v`
-          });    
+          
+#         github.rest.repos.createRelease({
+#           owner: context.repo.owner,
+#           repo: context.repo.repo,
+#           tag_name: `${JOB_NUMBER}v`
+#         });    
 
 
   build_macosx:
