--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -28,11 +28,11 @@ jobs:
           const tag_name = `${JOB_NUMBER1}v`
           console.log(`Hello tag_name ${tag_name}`) 
           
-#         github.rest.repos.createRelease({
-#           owner: context.repo.owner,
-#           repo: context.repo.repo,
-#           tag_name: `${JOB_NUMBER}v`
-#         });    
+          github.rest.repos.createRelease({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            tag_name: tag_name
+          });    
 
 
   build_macosx:
