--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -28,39 +28,28 @@ jobs:
             tag_name: tag_name
           });    
 
-  build_macosx:
-    needs: releases
-    runs-on: macos-latest    
-    steps: 
-    - uses: fwal/setup-swift@v1 # 5.4.3
+#   build_macosx:
+#     needs: releases
+#     runs-on: macos-latest    
+#     steps: 
+#     - uses: fwal/setup-swift@v1 # 5.4.3
     
-    - name: "Get latest GitHub Release"
-      id: get_release
-      uses: actions/github-script@v5
-      with:
-        script: |
-          github.rest.repos.getLatestRelease({
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-          });
-         
-    - uses: actions/checkout@v2
-    
-    - name: Build for Macos
-      run: |
-        cd HelloVapor
-        swift build
-      
-    - name: Build for Macos
-      run: |
-        echo "${{fromJson(steps.get_release.outputs.result)}}"
-        
-#     - name: Upload release assets for Macos
-#       uses: actions/upload-release-asset@v1.0.1
+#     - name: "Get latest GitHub Release"
+#       id: get_release
+#       uses: actions/github-script@v5
 #       with:
-#         upload_url: ${{ steps.get_release.outputs.upload_url }}
-#         asset_path: target/release/dmenv
-#         asset_name: dmenv-linux
+#         script: |
+#           github.rest.repos.getLatestRelease({
+#             owner: context.repo.owner,
+#             repo: context.repo.repo,
+#           });
+         
+#     - uses: actions/checkout@v2
+    
+#     - name: Build for Macos
+#       run: |
+#         cd HelloVapor
+#         swift build
 
   
   build_linux:
@@ -83,4 +72,16 @@ jobs:
     - name: Build for Linux
       run: |
         cd HelloVapor
-        swift build
+        # swift build
+        swift --version
+        
+    - name: Something else
+      run: |
+        echo "${{steps.get_release.outputs}}"
+        
+#     - name: Upload release assets for Macos
+#       uses: actions/upload-release-asset@v1.0.1
+#       with:
+#         upload_url: ${{ steps.get_release.outputs.upload_url }}
+#         asset_path: target/release/dmenv
+#         asset_name: dmenv-linux
