--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -67,6 +67,10 @@ jobs:
             repo: context.repo.repo,
           });
 
+    - name: Something else 1
+      run: |
+        echo "${{steps.get_release.outputs.upload_url}}"
+
     - uses: actions/checkout@v2
 
     - name: Build for Linux
@@ -78,12 +82,13 @@ jobs:
     - name: Something else
       run: |
         echo "${{steps.get_release.outputs.upload_url}}"
+        ls HelloVapor/.build/
         
     
         
-#     - name: Upload release assets for Macos
+#     - name: Upload release assets for Linux
 #       uses: actions/upload-release-asset@v1.0.1
 #       with:
 #         upload_url: ${{ steps.get_release.outputs.upload_url }}
-#         asset_path: target/release/dmenv
-#         asset_name: dmenv-linux
+#         asset_path: HelloVapor/.build/debug/Run
+#         asset_name: HelloVapor-Linux
