--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -55,14 +55,14 @@ jobs:
   build_linux:
     needs: releases
     runs-on: ubuntu-latest
-    container: swiftlang/swift:nightly-5.5-bionic
+    #container: swiftlang/swift:nightly-5.5-bionic
     steps:
     - name: "Get latest GitHub Release"
       id: get_release
       uses: actions/github-script@v5
       with:
         script: |
-          github.rest.repos.getLatestRelease({
+          return github.rest.repos.getLatestRelease({
             owner: context.repo.owner,
             repo: context.repo.repo,
           });
