--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -66,8 +66,8 @@ jobs:
             owner: context.repo.owner,
             repo: context.repo.repo,
           })
-          console.log(result)
-          return result
+          console.log(result.data)
+          return result.data
         result-encoding: json
         
     - name: Something else 1
