--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -72,7 +72,8 @@ jobs:
         
     - name: Something else 1
       run: |
-        echo "${{steps.get_release.outputs.upload_url}}"
+        echo "${{fromJson(steps.get_release.outputs.result)}}"
+        # upload_url
 
     - uses: actions/checkout@v2
 
