--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -80,19 +80,16 @@ jobs:
     - name: Build for Linux
       run: |
         cd HelloVapor
-        # swift build
-        swift --version
-        
-    - name: Something else
+        swift build
+      
+    - name: Debuging
       run: |
         echo "${{ steps.releases.outputs.asset_url }}"
         ls HelloVapor/.build/
         
-    
-        
-#     - name: Upload release assets for Linux
-#       uses: actions/upload-release-asset@v1.0.1
-#       with:
-#         upload_url: ${{ steps.get_release.outputs.upload_url }}
-#         asset_path: HelloVapor/.build/debug/Run
-#         asset_name: HelloVapor-Linux
+    - name: Upload release assets for Linux
+      uses: actions/upload-release-asset@v1.0.1
+      with:
+        upload_url: ${{ steps.releases.outputs.asset_url }}
+        asset_path: HelloVapor/.build/debug/Run
+        asset_name: HelloVapor-Linux
